fixed overflow on rotating text

--- a/public/css/pages/career.css
+++ b/public/css/pages/career.css
@@ -10,7 +10,7 @@
 }
 @media (min-width: 768px) {
   .rotatating-text__list {
-    height: 113px;
+    height: 115px;
   }
 }
 .rotatating-text__list-item {
