--- a/src/styles/scss/components/_text-rotation.scss
+++ b/src/styles/scss/components/_text-rotation.scss
@@ -11,7 +11,7 @@
         overflow: hidden;
 
         @media (min-width: 768px) {
-            height: 113px;
+            height: 115px;
         }
 
 
